--- a/styles/style.css
+++ b/styles/style.css
@@ -88,11 +88,14 @@ h1 {
   border-style: solid;
   border-radius: 20px;
   cursor: pointer;
+  transition: 0.5s all ease-in-out;
 }
 .img .column:hover {
   transform: scale(1.1);
   transition: 0.5s;
-  background-color: #9683ec;
+  color: #48abe0;
+  background-color: white;
+  box-shadow: 0 0 20px 10px #9bc7f4;
 }
 
 .logo-indi {
@@ -939,6 +942,7 @@ https://stackdiary.com/gradient-hover-effect-css/
   transform: scale(1.2);
   background: linear-gradient(#9bc7f4, #6045ea);
   color: whitesmoke;
+  box-shadow: 0px 3px 5px #9bc7f4;
 }
 .about-card:hover > p {
   color: whitesmoke;
@@ -963,6 +967,7 @@ https://stackdiary.com/gradient-hover-effect-css/
   transform: scale(1.2);
   background-image: linear-gradient(#9bc7f4, #6045ea);
   color: white;
+  box-shadow: 0px 3px 5px #9bc7f4;
 }
 
 .about-group-info dt:hover {
@@ -974,6 +979,10 @@ https://stackdiary.com/gradient-hover-effect-css/
   transform: scale(1.2);
   color: #fddc5c;
 }
+.about-timetable:hover {
+  box-shadow: 0px 5px 10px #9bc7f4;
+}
+
 .about-timetable:hover,
 .about-timetable h2:hover {
   transform: scale(1.1);
