--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,6 @@ h1 {
 .img .column {
   padding: 10px;
   text-align: center;
-  width: 1fr 1fr 1fr;
   margin: 30px;
   border: 2px;
   background-color: #ccd5f8;
@@ -103,7 +102,7 @@ h1 {
   max-height: 100px;
 }
 .logos {
-  padding: 50;
+  padding: 50px;
   display: flex;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   overflow-x: auto;
