--- a/styles/style.css
+++ b/styles/style.css
@@ -962,6 +962,11 @@ https://stackdiary.com/gradient-hover-effect-css/
   color: #fddc5c;
 }
 
+.about-mail a:active,
+.link-report a:active {
+  transform: scale(0.9);
+}
+
 .about-group-info dl:hover {
   transform: scale(1.2);
   background-image: linear-gradient(#9bc7f4, #6045ea);
