--- a/styles/style.css
+++ b/styles/style.css
@@ -753,6 +753,10 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   margin-bottom: 12px;
 }
 
+.footer-col ul {
+  padding-left: 0px;
+}
+
 .footer-col ul li a {
   text-decoration: none;
   color: #fff;
