--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 filename: main.css
 author: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
 created: 29-Mar-2023
-description: This file is the main file of whole css!
+description: This file contains the styling for the CloudLabs website
 */
 
 /**************************** General Styling ***********************/
@@ -39,7 +39,7 @@ description: This file is the main file of whole css!
   height: 100%;
   z-index: -1;
   /* Image Source: https://4kwallpapers.com/abstract/windows-11-gradient-background-bloom-light-backgrounds-5k-8411.html */
-  background-image: url("../images/ha.png");
+  background-image: url("images/ha.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
