--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /*
 filename: main.css
-author: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
+authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
 created: 29-Mar-2023
 description: This file contains the styling for the CloudLabs website
 */
