--- a/styles/style.css
+++ b/styles/style.css
@@ -352,7 +352,7 @@ selector:hover {
 }
 
 .about-mail {
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .about-mail a {
@@ -364,6 +364,24 @@ selector:hover {
   text-decoration: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   transition: 0.5s ease-in-out;
+}
+
+.about-group-img {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.about-group-img img {
+  max-width: 800px;
+  max-height: 800px;
+}
+
+.about-group-img figcaption {
+  font-size: large;
+  font-style: italic;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 #about-footer {
