--- a/styles/style.css
+++ b/styles/style.css
@@ -395,6 +395,28 @@ selector:hover {
 #job-main section {
   margin: 2em 0 0 0;
 }
+
+#job-main .table-of-contents {
+  width: 100vw;
+  display: block;
+}
+
+#job-main .job-des {
+  display: inline;
+  float: left;
+  width: 65%;
+}
+
+#job-main aside {
+  /* display: inline; */
+  float: right;
+  border: 0.5px solid rgb(51, 74, 75);
+  border-collapse: collapse;
+  border-radius: 5px;
+  padding: 1em;
+  margin: 1em;
+  width: 25%;
+}
 /* sections with contents placing in boxes, namely the tables and some descriptions for the jobs */
 #job-main dl,
 #job-main table,
