--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /*
 filename: main.css
-author: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
+authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
 created: 29-Mar-2023
 description: This file is the main file of whole css!
 */
@@ -728,6 +728,10 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 .footer-col {
   flex-basis: 25%;
   padding: 10px;
+}
+
+.footer-col ul {
+  padding-left: 0px;
 }
 
 /*team logo */
