--- a/styles/style.css
+++ b/styles/style.css
@@ -366,6 +366,29 @@ selector:hover {
   transition: 0.5s ease-in-out;
 }
 
+.about-group-img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px;
+  transition: 0.5s all ease-in-out;
+  cursor: pointer;
+}
+
+.about-group-img img {
+  max-width: 800px;
+  max-height: 800px;
+  transition: 0.3s all ease-in-out;
+}
+
+.about-group-img figcaption {
+  font-size: large;
+  font-style: italic;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  transition: 0.3s all ease-in-out;
+}
+
 #about-footer {
   margin-top: auto;
 }
@@ -1034,6 +1057,19 @@ https://stackdiary.com/gradient-hover-effect-css/
 .about-timetable th:hover,
 .about-timetable td:hover {
   transform: scale(1.2);
+}
+
+.about-group-img:hover {
+  margin-top: 80px;
+  transform: scale(1.2);
+}
+
+.about-group-img img:hover {
+  box-shadow: 0px 5px 20px #9bc7f4;
+}
+
+.about-group-img figcaption:hover {
+  color: #fddc5c;
 }
 
 .apply-input[type="submit"]:hover {
