--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /*
-filename: main.css
+filename: style.css
 authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
 created: 29-Mar-2023
 description: This file is the main file of whole css!
