--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,8 @@ selector:hover {
 /**************************** End of index.css ***********************/
 
 /**************************** Start of about.css ***********************/
+
+/* Remove padding and margin on all elements in the page*/
 .about-class * {
   margin: 0;
   padding: 0;
@@ -202,8 +204,6 @@ selector:hover {
 
 #about-body {
   color: #333;
-  /* margin: 0;
-  padding: 0; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -277,6 +277,7 @@ selector:hover {
   transition: 0.3s ease-in-out;
 }
 
+/* Member cards */
 .about-card {
   display: flex;
   align-items: center;
@@ -315,6 +316,7 @@ selector:hover {
   transition: all 0.5s ease;
 }
 
+/* Timetable */
 .about-timetable {
   margin-top: 50px;
   background-color: #f9f9f9;
@@ -355,6 +357,7 @@ selector:hover {
   margin-top: 50px;
 }
 
+/* Contact us button */
 .about-mail a {
   display: inline-block;
   background-color: #333;
@@ -366,6 +369,8 @@ selector:hover {
   transition: 0.5s ease-in-out;
 }
 
+
+/* Group image */
 .about-group-img {
   display: flex;
   flex-direction: column;
