--- a/styles/style.css
+++ b/styles/style.css
@@ -670,6 +670,11 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   color: #6378bb;
 }
 
+.apply-error {
+  padding-top: 10px;
+  color: #FF0004
+}
+
 /**************************** End of apply.css ***********************/
 
 /**************************** Start of enhancements.css ***********************/
