--- a/styles/style.css
+++ b/styles/style.css
@@ -576,6 +576,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 5px;
+  margin-bottom: 10px;
   box-sizing: border-box;
 }
 
@@ -604,7 +605,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 .apply-input,
 .apply-textarea,
 .apply-select {
-  margin: 10px 0 0 0;
+  margin: 10px 0 10px 0;
   display: inline-block;
 }
 
@@ -671,7 +672,6 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 }
 
 .apply-error {
-  padding-top: 10px;
   color: #FF0004
 }
 
