--- a/styles/style.css
+++ b/styles/style.css
@@ -675,6 +675,110 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   color: #FF0004
 }
 
+.apply-success-h2 {
+  text-align: center;
+}
+
+.apply-success-p {
+  text-align: center;
+}
+
+/* Modal CSS adapted from https://codepen.io/Idered/pen/DdeoeW */
+ .success-modal {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: left;
+  background: rgba(0,0,0, .9);
+  transition: opacity .25s ease;
+}
+
+.success-modal__bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+/* Don't show the checkbox for the success modal to the user */
+.show-success-modal {
+  display: none;
+}
+
+.show-success-modal:checked + .success-modal {
+  opacity: 1;
+  visibility: visible;
+}
+
+.show-success-modal:checked + .success-modal .success-modal__inner {
+  top: 0;
+}
+
+.success-modal__inner {
+  transition: top .25s ease;
+  position: absolute;
+  top: -20%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  margin: auto;
+  overflow: auto;
+  background: #fff;
+  border-radius: 5px;
+  padding: 4em;
+  height: 450px;
+  text-align: center;
+}
+
+.success-modal__close {
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  width: 1.1em;
+  height: 1.1em;
+  cursor: pointer;
+}
+
+.success-modal__close:after,
+.success-modal__close:before {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 1.5em;
+  background: #ccc;
+  display: block;
+  transform: rotate(45deg);
+  left: 50%;
+  margin: -3px 0 0 -1px;
+  top: 0;
+}
+
+.success-modal__close:hover:after,
+.success-modal__close:hover:before {
+  background: #aaa;
+}
+
+.success-modal__close:before {
+  transform: rotate(-45deg);
+}
+
+@media screen and (max-width: 768px) {
+	
+  .success-modal__inner {
+    width: 90%;
+    height: 90%;
+    box-sizing: border-box;
+  }
+}
+
+
 /**************************** End of apply.css ***********************/
 
 /**************************** Start of enhancements.css ***********************/
