--- a/styles/style.css
+++ b/styles/style.css
@@ -781,6 +781,173 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 
 /**************************** End of apply.css ***********************/
 
+
+/**************************** Start of loginmanager.css ***********************/
+
+.login_manager-class * {
+  margin: 0;
+  padding: 0;
+}
+
+/* username and password input */
+#login_manager-body input {
+  width: 80%;
+  padding: 12px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin: 10px 20px 10px 20px;
+  display: inline-block;
+}
+
+#login_manager-body input[type="submit"] {
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+  width: auto;
+  background-color: #5d79c0;
+  color: white;
+  text-align: center;
+  border: none;
+  border-radius: 7px;
+  font-size: 105%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+/* username and password label */
+#login_manager-body label {
+  margin: auto;
+  display: inline-block;
+}
+
+/* heading 1 */
+#login_manager-body h1 {
+  font-size: 4vw;
+  text-align: center;
+  margin: 10px;
+  color: black;
+}
+
+/* position and border of the form (for typing in username and password) */
+#login_manager-body form {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
+/* whole main part of the page */
+#login_manager-body  {
+  width: auto;
+  margin: 10px;
+  padding: 10px;
+  /* justify-content: center; */
+  /* display: flex; */
+}
+
+/**************************** End of loginmanager.css ***********************/
+
+/**************************** Start of manage.css ***********************/
+.manage-class * {
+  margin: 0;
+  padding: 0;
+}
+
+
+/* whole main part of the page */
+#manage-body {
+  width:80%;
+  margin: auto;
+  justify-content: center;
+  padding: 10px 10px 10px 10px;
+}
+
+/* headings*/
+#manage-body h1 {
+  font-size: 4vw;
+  text-align: center;
+  margin: 20px 0 0 0;
+  color: black;
+}
+
+#manage-body h2 {
+  font-size: 30px;
+  text-align: left;
+  font-weight: bold;
+  color: #6378bb;
+  margin: 20px 0 20px 0;
+  transition: 0.5s ease-in-out;
+}
+
+/* table design */
+#manage-body table, 
+#manage-body tr,  
+#manage-body th, 
+#manage-body td {
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  transition: 0.5s;
+  color: black;
+  background-color: #e7e7e7;
+}
+
+#manage-body table {
+  margin: 0;
+  border-collapse: collapse;
+  width: auto;
+  justify-content: center;
+  align-self: center;
+}
+
+#manage-body th {
+  background-color: #333;
+  color: #fff;
+}
+
+/* form (input, label, button design) */
+#manage-body input {
+  width: auto;
+  padding: 12px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin: 10px 0 10px 0;
+  display: inline-block;
+}
+
+#manage-body label {
+  margin: 20px 0 0 0;
+  display: inline-block;
+}
+
+#manage-body button, 
+#manage-body input[type="submit"] {
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+  width: auto;
+  text-align: center;
+  background-color: #5d79c0;
+  color: white;
+  padding: 15px;
+  border: none;
+  border-radius: 7px;
+  font-size: 10px;
+  margin-bottom: 50px;
+}
+
+
+/**************************** End of manage.css ***********************/
+
+
 /**************************** Start of enhancements.css ***********************/
 
 .enhancements-main {
