--- a/styles/style.css
+++ b/styles/style.css
@@ -801,7 +801,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   display: inline-block;
 }
 
-#login_manager-body input[type="submit"] {
+#login_manager-body button {
   cursor: pointer;
   transition: 0.5s ease-in-out;
   width: auto;
@@ -810,10 +810,13 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   text-align: center;
   border: none;
   border-radius: 7px;
-  font-size: 105%;
-  display: block;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
+
+  padding: 15px;
   margin-bottom: 10px;
 }
 
