--- a/styles/style.css
+++ b/styles/style.css
@@ -899,6 +899,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   transition: 0.5s;
   color: black;
   background-color: #e7e7e7;
+  border: 1px solid #ccc;
 }
 
 #manage-body table {
